# postfiatl1v2

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  STATUS.md  deny.toml  docker-compose.wallet-public.yml  docker-compose.wallet.yml  mkdocs.yml  package.json  requirements-docs.txt  requirements-test.in  requirements-test.txt  roadmap.md
crates/bench_harness/: Cargo.toml
crates/bench_harness/src/: main.rs
crates/crypto_provider/: Cargo.toml
crates/crypto_provider/examples/: ml_dsa_budget.rs
crates/crypto_provider/src/: lib.rs
crates/execution/: Cargo.toml
crates/execution/src/: atomic_swap_execution_tests.rs  atomic_swap_hashing_tests.rs  bridge_governance_execution_tests.rs  core_asset_execution_tests.rs  entrypoints.rs  fastlane_primary.rs  fastswap.rs  fastswap_asset_control.rs  fastswap_bridge.rs  fastswap_checkpoint.rs  fastswap_control.rs  fastswap_decision.rs  fee_replay_execution_tests.rs  fees_offer_planning.rs  issued_asset_ledger_helpers.rs  lib.rs  market_nav_execution_tests.rs  market_policy.rs  nav_sp1_verifier.rs  nav_vault_asset_execution.rs  nft_escrow_asset_execution.rs  nft_escrow_asset_state.rs  owned_transfer.rs  owned_transfer_recovery.rs  pftl_uniswap_ethereum_verification.rs  tests.rs  tx_hashing.rs  vault_bridge_policy.rs  vault_bridge_profile_resolution.rs
crates/fastpay-prototype/: Cargo.toml
crates/fastpay-prototype/src/: cancellation_model.rs  flow.rs  lib.rs  main.rs  state.rs
crates/fastswap_model/: Cargo.toml  README.md
crates/fastswap_model/src/: lib.rs  main.rs
crates/fuzz_harness/: Cargo.toml
crates/fuzz_harness/src/: main.rs
crates/mempool_dag/: Cargo.toml
crates/mempool_dag/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/node/: Cargo.toml  build.rs
crates/node/src/: atomic_swap_rpc.rs  atomic_swap_rpc_server.rs  batch_snapshot.rs  block_finality.rs  block_replay_wallet.rs  consensus_artifacts.rs  consensus_v2_finality.rs  consensus_v2_store.rs  ethereum_checkpoint_signing.rs  ethereum_receipt_proof_builder.rs  execution_actions.rs  fastpay_recovery_node.rs  fastswap_service.rs  finality_view_recovery.rs  governance.rs  governance_agent.rs  history.rs  lib.rs  lib_tests.rs  lifecycle_queries.rs  main.rs  market_bridge.rs  mempool_proposals.rs  node_types.rs  node_types_snapshot_deployment.rs  orchard_policy_actions.rs  orchard_state_application.rs  pfusdc_tier4.rs  privacy.rs  rpc_cli.rs  rpc_dispatch.rs  shielded_batch_actions.rs  state_commitment.rs  storage_commit.rs  transport_cli.rs  transport_protocol.rs  transport_runtime.rs  vault_bridge_conservation.rs  vault_bridge_workflows.rs
crates/node/src/governance_agent_parts/: gate_entrypoints.rs  implementation_guarded_apply.rs  ruleset_hashing_io.rs  tests.rs  verifier_receipts_adversarial.rs
crates/node/src/main_parts/: cli_dispatch.rs  nav_roundtrip_certified_rounds.rs  nav_roundtrip_checkpoint_accounting.rs  nav_roundtrip_dashboard_benchmarks.rs  nav_roundtrip_exit_settlement.rs  nav_roundtrip_live_workflows.rs  nav_roundtrip_runner.rs  nav_roundtrip_schemas_relay.rs  runtime_helpers.rs  tests.rs
crates/node/src/tests/: asset_nft_offer_tests.rs  asset_orchard_issued_tests.rs  atomic_swap_consensus.rs  consensus_history.rs  fastpay_payment_safety.rs  governance_history_manifest_tests.rs  helpers_orchard_transfer_escrow.rs  orchard_transfer_escrow.rs  pftl_uniswap_bridge_rpc_tests.rs  replicated_state_activation.rs  snapshot_deployment.rs  vault_bridge_governed_route.rs
crates/node/testdata/wan-devnet-catchup-block-3/: batch.json  block-certificate.json  block.json
crates/node/tests/: atomic_swap_local_six.rs  fastpay_default_rpc.rs  fastswap_local_six.rs  wallet_test_vector_redaction.rs
crates/ordering_fast/: Cargo.toml
crates/ordering_fast/examples/: hotstuff_ordering_evidence.rs
crates/ordering_fast/src/: consensus_v2.rs  lib.rs
crates/ordering_fast/src/consensus_v2/: tests.rs
crates/pfusdc_proofs/: Cargo.toml
crates/pfusdc_proofs/src/: lib.rs  tests.rs
crates/privacy/: Cargo.toml
crates/privacy/src/: lib.rs
crates/privacy_orchard/: Cargo.toml
crates/privacy_orchard/examples/: orchard_verification_budget.rs
crates/privacy_orchard/src/: asset_orchard.rs  asset_orchard_action_builders.rs  asset_orchard_circuit.rs  asset_orchard_circuit_tests.rs  asset_orchard_legacy_circuits.rs  asset_orchard_note_encryption.rs  asset_orchard_sinsemilla.rs  lib.rs  timing.rs  types.rs  verify.rs
crates/proofs/: Cargo.toml
crates/proofs/src/: lib.rs
crates/rpc_sdk/: Cargo.toml
crates/rpc_sdk/examples/: fastswap_wallet.rs  tcp_wallet_flow.rs
crates/rpc_sdk/src/: atomic_swap_protocol.rs  atomic_swap_response_validation.rs  atomic_swap_wallet.rs  atomic_swap_wallet_tests.rs  fastswap_client.rs  fastswap_session.rs  fastswap_signing.rs  fastswap_tcp.rs  fastswap_wallet.rs  fastswap_wire.rs  lib.rs  main.rs  protocol_request_tests.rs  protocol_requests.rs  protocol_response_helpers.rs  response_validation.rs  response_validation_tests.rs  wallet_sdk.rs
crates/storage/: Cargo.toml
crates/storage/src/: fastswap_store.rs  lib.rs
crates/types/: Cargo.toml
crates/types/src/: account_owned_asset_types.rs  atomic_swap_batch_tests.rs  atomic_swap_type_tests.rs  consensus_v2_types.rs  core_chain.rs  ethereum_bridge_types.rs  fastpay_recovery_types.rs  fastswap_types.rs  ledger_assets.rs  lib.rs  market_nav_asset_types.rs  pfusdc_tier4_type_tests.rs  pfusdc_tier4_types.rs  shielded_bridge_governance.rs  tests.rs  transactions_mempool_receipts.rs  transactions_validation_helpers.rs
crates/wallet_wasm/: Cargo.toml
crates/wallet_wasm/src/: lib.rs
programs/pfusdc-egress/: Cargo.toml
programs/pfusdc-egress/elf/: pfusdc-egress-program
programs/pfusdc-egress/src/: main.rs
programs/pfusdc-ingress/: Cargo.toml
programs/pfusdc-ingress/elf/: pfusdc-ingress-program
programs/pfusdc-ingress/src/: lib.rs  main.rs
tools/pfusdc-tier4-prover/: Cargo.toml
tools/pfusdc-tier4-prover/src/: egress_audit.rs  ingress_capture.rs  main.rs  manifest.rs
(+1978 files in other folders)
