[workspace]
members = [
    "crates/bench_harness",
    "crates/bridge",
    "crates/consensus_cobalt",
    "crates/crypto_provider",
    "crates/execution",
    "crates/fastswap_model",
    "crates/fastpay-prototype",
    "crates/fuzz_harness",
    "crates/mempool_dag",
    "crates/network",
    "crates/node",
    "crates/ordering_fast",
    "crates/privacy",
    "crates/privacy_orchard",
    "crates/proofs",
    "crates/rpc_sdk",
    "crates/storage",
    "crates/types",
    "crates/wallet_wasm",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/postfiatorg/postfiatl1v2"

[workspace.dependencies]
base64 = "0.22"
fips204 = "0.4.6"
flate2 = "1"
incrementalmerkletree = "0.8.2"
nonempty = "0.11.0"
orchard = "0.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sha3 = "0.11"
k256 = { version = "0.13", features = ["ecdsa"] }
libc = "0.2"
zcash_note_encryption = "0.4.1"
zeroize = "1"
zip32 = "0.2.1"

[patch.crates-io]
halo2_proofs = { path = "third_party/halo2_proofs" }
