[package]
name = "postfiat-mempool-dag"
version = "0.1.0"
description = "PostFiat L1 mempool dependency-graph primitives"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
postfiat-crypto-provider = { path = "../crypto_provider" }
postfiat-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
