[package]
name = "postfiat-privacy"
version = "0.1.0"
description = "Privacy-domain state and verification primitives for PostFiat L1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
postfiat-crypto-provider = { path = "../crypto_provider" }
postfiat-proofs = { path = "../proofs" }
postfiat-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
