[package]
name = "postfiat-rpc-sdk"
version = "0.1.0"
description = "Client RPC SDK for PostFiat L1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
postfiat-crypto-provider = { path = "../crypto_provider" }
postfiat-execution = { path = "../execution" }
postfiat-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
zeroize = { workspace = true }
sha3 = { workspace = true }
base64 = { workspace = true }
flate2 = { workspace = true }
