[package]
name = "postfiat-storage"
version = "0.1.0"
description = "Persistence and replay storage for PostFiat L1"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
libc = { workspace = true }
postfiat-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
sha3 = { workspace = true }
