[package]
name = "postfiat-wallet-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM wallet core for PostFiat L1 — keygen, signing, address derivation in the browser"
repository = "https://github.com/postfiatorg/postfiatl1v2"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
postfiat-crypto-provider = { path = "../crypto_provider" }
postfiat-rpc-sdk = { path = "../rpc_sdk" }
postfiat-types = { path = "../types" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }
