[package]
name = "pfusdc-egress-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
postfiat-pfusdc-proofs = { path = "../../crates/pfusdc_proofs" }
postfiat-types = { path = "../../crates/types" }
serde_cbor = "0.11.2"
sp1-zkvm = { version = "=6.3.1" }

[workspace]
