[package]
name = "pfusdc-egress-program"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
mldsa-guest-acceleration = ["postfiat-pfusdc-proofs/mldsa-guest-acceleration"]
mldsa-cycle-tracking = ["postfiat-pfusdc-proofs/mldsa-cycle-tracking"]
default = ["mldsa-guest-acceleration"]

[dependencies]
postfiat-pfusdc-proofs = { path = "../../crates/pfusdc_proofs" }
postfiat-types = { path = "../../crates/types" }
serde_cbor = "0.11.2"
sp1-zkvm = { version = "=6.3.1" }

[workspace]

[patch.crates-io]
sha2-v0-9-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.9.9-sp1-6.0.0" }
sha2-v0-10-9 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0" }
sha3-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha3", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
tiny-keccak = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-6.0.0" }
bls12_381 = { git = "https://github.com/sp1-patches/bls12_381", tag = "patch-0.8.0-sp1-6.0.0-v2" }
