[package]
name = "pfusdc-tier4-prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
pfusdc-ingress-program = { path = "../../programs/pfusdc-ingress" }
postfiat-pfusdc-proofs = { path = "../../crates/pfusdc_proofs" }
postfiat-types = { path = "../../crates/types" }
serde_json = "1.0"
sha3 = "0.10"
sp1-sdk = { version = "=6.3.1", features = ["network"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[workspace]
