[package]
name = "pfusdc-tier4-prover"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
sp1-cuda = ["sp1-sdk/cuda"]
sp1-profiling = ["sp1-sdk/profiling"]

[dependencies]
anyhow = "1.0"
alloy = { version = "=1.8.3", default-features = false, features = ["std", "consensus", "rpc-types", "serde", "sha3-keccak"] }
alloy-rlp = "=0.3.12"
alloy-sol-types = "=1.5.7"
alloy-trie = "=0.9.5"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
helios-consensus-core = { git = "https://github.com/a16z/helios", tag = "0.11.1" }
hex = "0.4"
pfusdc-ingress-program = { path = "../../programs/pfusdc-ingress" }
postfiat-pfusdc-proofs = { path = "../../crates/pfusdc_proofs" }
postfiat-types = { path = "../../crates/types" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1.0"
serde_cbor = "0.11.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
sp1-helios-primitives = { git = "https://github.com/succinctlabs/sp1-helios", rev = "b9bdddf8221e31d41075d4a97f9a14ca6df13cf0" }
sp1-sdk = { version = "=6.3.1", features = ["network"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tree_hash = "0.10.0"

[workspace]
